--- a/templates/cmd.html
+++ b/templates/cmd.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <title>Hello to Arduino!</title>
 {% if cmd %}
-  <h1>Command: {{ cmd }}!</h1>
+  <h1>Command: {{ cmd }}</h1>
 {% endif %}
 <form action="{{ url_for('command') }}" method="POST">
     <input type="text" name="cmd" value=""/>
     <input type="submit" value="Enviar"/>
-</form>    
+</form>
